Establecida la conexion con postgresql